[package]
name = "cgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
#opt-level = 3
#lto = "fat"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[dependencies]
rand = "0.8.5"
float_eq = "1.0.1"
nohash-hasher = "0.2.0"
clap = { version = "4.2.5", features = ["derive"] }
